Fixed sorting in analysis mode causing sub-tables to be out of alignment.

--- a/app/data-table/data-table.css
+++ b/app/data-table/data-table.css
@@ -61,3 +61,7 @@
 .bold {
     font-weight: bold;
 }
+
+td {
+    white-space: nowrap;
+}
